web test:  - fix overflow-x when y scrollbar is shown

--- a/test_web/static/css/index.less
+++ b/test_web/static/css/index.less
@@ -11,7 +11,6 @@
 }
 
 .navbar {
-    width: 100vw;
     align-items: center;
     padding-inline: 3%;
     gap: auto;
